JT-280: Refactor unit test