@@ -5,8 +5,10 @@ import com.lhduc.model.entity.MenuItem;
 import com.lhduc.repository.MenuItemRepository;
 import com.lhduc.util.DatasourceUtil;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class MenuItemRepositoryImpl implements MenuItemRepository {
     private final Datasource datasource;
@@ -22,24 +24,24 @@ public class MenuItemRepositoryImpl implements MenuItemRepository {
     @Override
     public List<MenuItem> getAll() {
         List<MenuItem> menuItems = this.datasource.readData(MenuItem.class);
-        return menuItems.stream().filter(item -> !item.isDeleted()).toList();
+        return menuItems.stream().filter(item -> !item.isDeleted()).collect(Collectors.toList());
     }
 
     @Override
     public List<MenuItem> getByMenuId(int menuId) {
-        List<MenuItem> menuItems = this.datasource.readData(MenuItem.class);
+        List<MenuItem> menuItems = this.getAll();
         return menuItems.stream().filter(item -> item.getMenuId() == menuId).toList();
     }
 
     @Override
     public Optional<MenuItem> getById(int id) {
-        List<MenuItem> menuItems = this.datasource.readData(MenuItem.class);
+        List<MenuItem> menuItems = this.getAll();
         return menuItems.stream().filter(item -> item.getId() == id).findFirst();
     }
 
     @Override
     public Optional<MenuItem> create(MenuItem menuItem) {
-        List<MenuItem> menuItems = this.datasource.readData(MenuItem.class);
+        List<MenuItem> menuItems = this.getAll();
         MenuItem createdMenuItem = new MenuItem(menuItem);
         createdMenuItem.setId(this.generateId(menuItems));
 
@@ -52,7 +54,7 @@ public class MenuItemRepositoryImpl implements MenuItemRepository {
 
     @Override
     public Optional<MenuItem> update(MenuItem menuItem) {
-        List<MenuItem> menuItems = this.datasource.readData(MenuItem.class);
+        List<MenuItem> menuItems = this.getAll();
         Optional<MenuItem> existedMenuItem = this.getById(menuItem.getId());
 
         if (existedMenuItem.isEmpty()) {
@@ -69,7 +71,7 @@ public class MenuItemRepositoryImpl implements MenuItemRepository {
 
     @Override
     public void deleteById(int id) {
-        List<MenuItem> menuItems = this.datasource.readData(MenuItem.class);
+        List<MenuItem> menuItems = this.getAll();
         menuItems.forEach(item -> {
             if (item.getId() == id) {
                 item.setDeleted(true);
@@ -81,7 +83,7 @@ public class MenuItemRepositoryImpl implements MenuItemRepository {
 
     @Override
     public void deleteAllMenuItemsByMenuId(int menuId) {
-        List<MenuItem> menuItems = this.datasource.readData(MenuItem.class);
+        List<MenuItem> menuItems = this.getAll();
         for (MenuItem menuItem : menuItems) {
             if (menuItem.getMenuId() == menuId) {
                 menuItem.setDeleted(true);
@@ -92,7 +94,7 @@ public class MenuItemRepositoryImpl implements MenuItemRepository {
     }
 
     private void save(List<MenuItem> menuItems) {
-        this.datasource.saveAll(menuItems.stream().toList(), MenuItem.class);
+        this.datasource.saveAll(menuItems, MenuItem.class);
     }
 
     private int generateId(List<MenuItem> menuItems) {
